# TRLBot2

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  quotes.json
.github/workflows/: docker-build-push.yml
src/: main.rs  trl.sqlite
src/match/: cmd.rs  query.rs  response.rs
src/player/: cmd.rs  mod.rs  query.rs  response.rs
src/register/: cmd.rs  mod.rs
src/schedule/: mod.rs
src/stats/: query.rs
src/team/: cmd.rs  mod.rs  query.rs  response.rs
src/utility/: ballchasing.rs  mod.rs  query.rs  response.rs
