[package]
name = "TRLBot2"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { version = "0.6.1" }
rusqlite = "0.32.1"
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["blocking", "multipart", "json", "rustls-tls", "trust-dns"]}
trust-dns-resolver = "0.23.2"
once_cell = "1.20.2"
rand = "0.8.5"
